fix product dialog size on small screens

--- a/admin-app/src/app/product-dialog/product-dialog.component.scss
+++ b/admin-app/src/app/product-dialog/product-dialog.component.scss
@@ -6,3 +6,9 @@
 .mat-dialog-title {
     padding-bottom: 10px;
 }
+
+@media screen and (max-width: 500px) {
+    .container {
+        min-width: 100%;
+    }
+}
